CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)



FIND_PACKAGE(Torch REQUIRED)
# FIND_PATH(SOX_INCLUDE_DIR sox.h)
# FIND_LIBRARY(SOX_LIBRARIES sox)
message ("SOX_INCLUDE_DIR: ${SOX_INCLUDE_DIR}")
message ("SOX_LIBRARY_DIR: ${SOX_LIBRARY_DIR}")

#FIND_PATH(FFTW_INCLUDE_DIR fftw3.h)
#FIND_LIBRARY(FFTW_LIBRARIES fftw3)
message ("FFTW_INCLUDE_DIR: ${FFTW_INCLUDE_DIR}")
message ("FFTW_LIBRARY_DIR: ${FFTW_LIBRARY_DIR}")

SET(src sox.c)
include_directories (${SOX_INCLUDE_DIR})
ADD_TORCH_PACKAGE(sox "${src}" "${luasrc}" "Audio Processing")
TARGET_LINK_LIBRARIES(sox luaT TH ${SOX_LIBRARY_DIR}/sox)

include_directories (${FFTW_INCLUDE_DIR})
SET(src audio.c)
SET(luasrc init.lua voice.mp3)
ADD_TORCH_PACKAGE(audio "${src}" "${luasrc}" "Audio Processing")
TARGET_LINK_LIBRARIES(audio luaT TH ${SOX_LIBRARY_DIR}/sox ${FFTW_LIBRARY_DIR}/fftw3)
